Fix calendar visualization by configuring Maven resources and Java version
Co-authored-by: francedap <127098228+francedap@users.noreply.github.com>